# GhostCore

./: README.md
GhostCore/: AGENTS.md  Requirements.txt  ghost_gateway.py  main.py  mypy_errors.txt  mypy_errors2.txt  mypy_errors3.txt  pyproject.toml  test_calculator.py  test_integration.py  · GITIGNORE
GhostCore/ghost_core/: __init__.py  brain.py  engine.py
GhostCore/ghost_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
GhostCore/ghost_core/agents/: __init__.py  architect.py  designer.py  hunter.py  maestro.py  moderator.py  sentinel.py  utils.py  writer.py
GhostCore/ghost_core/core_logic/: __init__.py  event_bus.py  mission_control.py  orchestrator.py
GhostCore/web/: index.html
